--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -33,7 +33,8 @@ library
         aeson >=1.4.3.0 && <1.5,
         text >=1.2.3.1 && <1.3,
         array,
-        hw-prim
+        hw-prim,
+        text-show
     
     if flag(llvm)
         ghc-options: -O -Wall -Wcompat -Wincomplete-record-updates
