Added attoparsec parsers for CLTU and conduits for encoding/decoding

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -46,7 +46,10 @@ library
         vector,
         hexdump,
         formatting,
-        QuickCheck
+        attoparsec,
+        attoparsec-binary,
+        conduit,
+        conduit-extra
 
     
     if flag(llvm)
