--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -49,7 +49,8 @@ library
         attoparsec,
         attoparsec-binary,
         conduit,
-        conduit-extra
+        conduit-extra,
+        closed
 
     
     if flag(llvm)
