Converted Randomizer into a State Monad

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -50,7 +50,9 @@ library
         attoparsec-binary,
         conduit,
         conduit-extra,
-        closed
+        closed,
+        rio,
+        mtl
 
     
     if flag(llvm)
