Corrected processing of CLTUs for the standard case, works now correctly. Randomizing needs to be tested.

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -90,6 +90,8 @@ Executable CLTUTest
             ,hedgehog
             ,hedgehog-quickcheck
             ,inline-c
+            ,attoparsec
+            ,text
 
     else
         Buildable: False
