--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ DefaultConfig.json
 .vscode/ipch/24699179e0f2fe2a/mmap_address.bin
 .vscode/ipch/24699179e0f2fe2a/CLTUcsrc.ipch
 .vscode/ipch/24698879e0f2eedf/mmap_address.bin
+CLTUPerf.hp
+CLTUPerf.prof
+codProcChar.html
+.vscode/ipch/a1fb3b55593f9a15/CLTUcsrc.ipch
+.vscode/ipch/a1fb3b55593f9a15/mmap_address.bin
+.vscode/ipch/a1fb4055593fa294/mmap_address.bin
+perf.html
