--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ codProcChar.html
 .vscode/ipch/a1fb3b55593f9a15/mmap_address.bin
 .vscode/ipch/a1fb4055593fa294/mmap_address.bin
 perf.html
+.ghc.environment.x86_64-linux-8.6.4
