--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -31,6 +31,7 @@ library
     exposed-modules:
         General.Chunks
         General.Hexdump
+        Control.PUS.TCFrameMonad
         Data.PUS.Config
         Data.PUS.CRC
         Data.PUS.CLTU
