--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -75,6 +75,7 @@ library
 
 executable WriteConfig
     main-is: WriteConfig.hs
+    default-language: Haskell2010
     hs-source-dirs: src/test
     ghc-options: -Wall -O
     build-depends:
@@ -82,31 +83,34 @@ executable WriteConfig
         base >=4.12.0.0 && <4.13,
         bytestring >=0.10.8.2 && <0.11
 
-executable CLTUTest
+test-suite CLTUTest
+    type: exitcode-stdio-1.0
     main-is: CLTUTest.hs
+    default-language: Haskell2010
     c-sources:
         src/csrc/CLTUcsrc.c
     hs-source-dirs: src/test
     include-dirs: src/csrc
     ghc-options: -Wall -O
     
-    if flag(tests)
-        build-depends:
-            esa-space-protocols -any,
-            base -any,
-            bytestring -any,
-            hedgehog -any,
-            hedgehog-quickcheck -any,
-            inline-c -any,
-            attoparsec -any,
-            text -any,
-            mtl -any,
-            vector -any
-    else
-        buildable: False
+    build-depends:
+        esa-space-protocols -any,
+        base -any,
+        bytestring -any,
+        hedgehog -any,
+        hedgehog-quickcheck -any,
+        inline-c -any,
+        attoparsec -any,
+        text -any,
+        mtl -any,
+        vector -any
 
-executable CLTUPerf
+
+
+benchmark CLTUPerf
+    type: exitcode-stdio-1.0
     main-is: CLTUPerf.hs
+    default-language: Haskell2010
     c-sources:
         src/csrc/CLTUcsrc.c
     hs-source-dirs: src/bench
@@ -116,13 +120,10 @@ executable CLTUPerf
     --ghc-options: -Wall -O2 -threaded -fprof-auto -fexternal-interpreter
     --            -funbox-strict-fields -prof "-with-rtsopts=-N -p -s -h -i0.1"
     
-    if flag(bench)
-        build-depends:
-            esa-space-protocols -any,
-            base -any,
-            bytestring -any,
-            inline-c -any,
-            criterion -any,
-            inline-c -any
-    else
-        buildable: False
+    build-depends:
+        esa-space-protocols -any,
+        base -any,
+        bytestring -any,
+        inline-c -any,
+        criterion -any,
+        inline-c -any
