--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ codProcChar.html
 .vscode/ipch/a1fb4055593fa294/mmap_address.bin
 perf.html
 .ghc.environment.x86_64-linux-8.6.4
+.bash_history
+.cabal
