Added first incomplete spec for the FOP1- state machine. Added a few utility types

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -52,6 +52,7 @@ library
         Data.PUS.FOP1
         Data.PUS.FARM1
         Data.PUS.Segment
+        Data.PUS.Time
 
 
     hs-source-dirs: src
