--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -59,29 +59,27 @@ library
     default-language: Haskell2010
     other-extensions: OverloadedStrings BangPatterns
     build-depends:
-        base ==4.12.*,
-        bytestring >=0.10.8.2 && <0.11,
-        aeson >=1.4.3.0 && <1.5,
-        text >=1.2.3.1 && <1.3,
-        array >=0.5.3.0 && <0.6,
-        hw-prim >=0.6.2.23 && <0.7,
-        text-show >=3.8.2 && <3.9,
-        vector >=0.12.0.3 && <0.13,
-        hexdump ==0.1.*,
-        formatting >=6.3.7 && <6.4,
-        attoparsec >=0.13.2.2 && <0.14,
-        attoparsec-binary ==0.2.*,
-        attoparsec-data,
-        conduit >=1.3.1.1 && <1.4,
-        conduit-extra >=1.3.1.1 && <1.4,
-        closed >=0.2.0.1 && <0.3,
-        rio >=0.1.9.2 && <0.2,
-        mtl >=2.2.2 && <2.3,
-        unliftio >=0.2.10 && <0.3,
-        parallel >=3.2.2.0 && <3.3,
-        lens,
-        binary,
-        stm
+        base 
+        , bytestring 
+        , aeson 
+        , text 
+        , hw-prim 
+        , text-show 
+        , vector
+        , formatting 
+        , attoparsec 
+        , attoparsec-binary
+        , attoparsec-data
+        , conduit 
+        , conduit-extra
+        , closed 
+        , rio
+        , mtl 
+        , unliftio
+        , parallel
+        , lens
+        , binary
+        , stm
     
     if flag(llvm)
         ghc-options: -O -Wall -Wcompat -Wincomplete-record-updates
