Changed to strict bytestring builder as it is said that it is much faster

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -61,6 +61,7 @@ library
     build-depends:
         base 
         , bytestring 
+        , bytestring-strict-builder
         , aeson 
         , text 
         , hw-prim 
