--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -41,10 +41,12 @@ library
         Data.PUS.Events
         Data.PUS.CRC
         Data.PUS.CLTU
+        Data.PUS.CLTUEncoder
         Data.PUS.CLTUTable
         Data.PUS.CLCW
         Data.PUS.Randomizer
         Data.PUS.TCTransferFrame
+        Data.PUS.TCTransferFrameEncoder
         Data.PUS.TCRequest
         Data.PUS.TCRequestEncoder
         Data.PUS.TCPacket
@@ -154,3 +156,19 @@ benchmark CLTUPerf
         inline-c -any,
         criterion -any,
         inline-c -any
+
+
+executable CommandingTest
+    main-is: CommandingTest.hs
+    default-language: Haskell2010
+    hs-source-dirs: src/test
+    ghc-options: -Wall -O
+    build-depends:
+        esa-space-protocols
+        , base
+        , bytestring
+        , conduit
+        , conduit-extra
+        , rio
+        , text
+        , unliftio
