--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -32,7 +32,7 @@ library
         General.Chunks
         General.Hexdump
         General.Padding
-        Control.PUS.Monads
+        Control.PUS.Classes
         Data.PUS.Config
         Data.PUS.Types
         Data.PUS.APID
@@ -67,7 +67,9 @@ library
 
     hs-source-dirs: src
     default-language: Haskell2010
-    other-extensions: OverloadedStrings BangPatterns
+    other-extensions:
+        OverloadedStrings
+        BangPatterns
     build-depends:
         base
         , bytestring
@@ -94,12 +96,12 @@ library
         , thyme
 
     if flag(llvm)
-        ghc-options: -O -Wall -Wcompat -Wincomplete-record-updates
-                     -Wincomplete-uni-patterns -Wredundant-constraints
+        ghc-options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -fllvm
     else
-        ghc-options: -O -Wall -Wcompat -Wincomplete-record-updates
-                     -Wincomplete-uni-patterns -Wredundant-constraints
+        ghc-options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
 
 executable WriteConfig
