--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -164,7 +164,7 @@ executable CommandingTest
     main-is: CommandingTest.hs
     default-language: Haskell2010
     hs-source-dirs: src/test
-    ghc-options: -Wall -O
+    ghc-options: -Wall -O -threaded -rtsopts
     build-depends:
         esa-space-protocols
         , base
