Added a data type to keep function arguments together, created initialize function for AD mode.

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -105,6 +105,7 @@ library
         , thyme
         , vector-binary-instances
         , bytestring-to-vector
+        , timer-wheel
 
     if flag(llvm)
         ghc-options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
