--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -112,11 +112,11 @@ library
         , containers
 
     if flag(llvm)
-        ghc-options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -fllvm
     else
-        ghc-options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
 
@@ -179,7 +179,10 @@ executable CommandingTest
     main-is: CommandingTest.hs
     default-language: Haskell2010
     hs-source-dirs: src/test
-    ghc-options: -Wall -O -threaded -rtsopts
+    if flag(llvm)
+        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm
+    else
+        ghc-options: -Wall -O2 -threaded -rtsopts
     build-depends:
         esa-space-protocols
         , base
