--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -179,7 +179,10 @@ executable CommandingTest
     main-is: CommandingTest.hs
     default-language: Haskell2010
     hs-source-dirs: src/test
-    ghc-options: -Wall -O -threaded -rtsopts
+    if flag(llvm)
+        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+    else
+        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
     build-depends:
         esa-space-protocols
         , base
