Cleanup of TC Transfer Frames.
Moved types to an own module. Split TC Request so that it can also be used for directives

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -46,6 +46,7 @@ library
         Data.PUS.CLTUTable
         Data.PUS.CLCW
         Data.PUS.Randomizer
+        Data.PUS.TCFrameTypes
         Data.PUS.TCTransferFrame
         Data.PUS.TCTransferFrameEncoder
         Data.PUS.TCRequest
