--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -74,6 +74,10 @@ library
         Protocol.NCTRS
         Protocol.ProtocolInterfaces
         Protocol.Switcher
+        Interface.Interface 
+        Interface.SocketInterface
+        Interface.Actions
+        Interface.Executor
 
 
     hs-source-dirs: src
@@ -105,12 +109,14 @@ library
         , lens
         , binary
         , stm-conduit
+        , stm-chans
         , thyme
         , vector-binary-instances
         , bytestring-to-vector
         , timer-wheel
         , base64-bytestring-type
         , containers
+        , word8
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
