--- a/mcs-interface.cabal
+++ b/mcs-interface.cabal
@@ -68,6 +68,15 @@ library
   build-depends:       
     base ^>=4.12.0.0
     , esa-space-protocols
+    , rio 
+    , aeson 
+    , binary 
+    , bytestring
+    , stm-chans 
+    , conduit 
+    , conduit-extra 
+    , stm-conduit 
+    , word8 
 
   -- Directories containing source files.
   hs-source-dirs:      src
