--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -113,6 +113,7 @@ library
         , base64-bytestring-type
         , containers
         , word8
+        , serialise
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
