--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -186,13 +186,13 @@ benchmark CmdEncodePerf
     main-is: CmdEncodePerf.hs
     default-language: Haskell2010
     hs-source-dirs: src/bench
-    if flag(llvm)
-        ghc-options: -Wall -O2 -funbox-strict-fields -fllvm
-    else
-        ghc-options: -Wall -O2 -funbox-strict-fields
+    -- if flag(llvm)
+    --     ghc-options: -Wall -O2 -funbox-strict-fields -fllvm
+    -- else
+    --     ghc-options: -Wall -O2 -funbox-strict-fields
     -- For profiling comment this line in:
-    --ghc-options: -Wall -O2 -threaded -fprof-auto -fexternal-interpreter
-    --            -funbox-strict-fields -prof "-with-rtsopts=-N -p -s -h -i0.1"
+    ghc-options: -Wall -O2 -threaded -fprof-auto -fexternal-interpreter
+                -funbox-strict-fields -prof "-with-rtsopts=-N -p -s -h -i0.1"
 
     build-depends:
         esa-space-protocols -any,
