--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -157,29 +157,29 @@ test-suite CLTUTest
 
 
 
-benchmark CLTUPerf
-    type: exitcode-stdio-1.0
-    main-is: CLTUPerf.hs
-    default-language: Haskell2010
-    c-sources:
-        src/csrc/CLTUcsrc.c
-    hs-source-dirs: src/bench
-    include-dirs: src/csrc
-    if flag(llvm)
-        ghc-options: -Wall -O2 -funbox-strict-fields -fllvm
-    else
-        ghc-options: -Wall -O2 -funbox-strict-fields
-    -- For profiling comment this line in:
-    --ghc-options: -Wall -O2 -threaded -fprof-auto -fexternal-interpreter
-    --            -funbox-strict-fields -prof "-with-rtsopts=-N -p -s -h -i0.1"
+-- benchmark CLTUPerf
+--     type: exitcode-stdio-1.0
+--     main-is: CLTUPerf.hs
+--     default-language: Haskell2010
+--     c-sources:
+--         src/csrc/CLTUcsrc.c
+--     hs-source-dirs: src/bench
+--     include-dirs: src/csrc
+--     if flag(llvm)
+--         ghc-options: -Wall -O2 -funbox-strict-fields -fllvm
+--     else
+--         ghc-options: -Wall -O2 -funbox-strict-fields
+--     -- For profiling comment this line in:
+--     --ghc-options: -Wall -O2 -threaded -fprof-auto -fexternal-interpreter
+--     --            -funbox-strict-fields -prof "-with-rtsopts=-N -p -s -h -i0.1"
 
-    build-depends:
-        esa-space-protocols -any,
-        base -any,
-        bytestring -any,
-        inline-c -any,
-        criterion -any,
-        inline-c -any
+--     build-depends:
+--         esa-space-protocols -any,
+--         base -any,
+--         bytestring -any,
+--         inline-c -any,
+--         criterion -any,
+--         inline-c -any
 
 benchmark CmdEncodePerf
     type: exitcode-stdio-1.0
