Some updates, added new Value datatype

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -70,6 +70,7 @@ library
         Data.PUS.TMFrameDfh
         Data.PUS.TMFrameExtractor
         Data.PUS.MissionSpecific.Definitions
+        Data.PUS.Value
         Protocol.SizeOf
         Protocol.NCTRS
         Protocol.ProtocolInterfaces
