--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -115,6 +115,7 @@ library
         , containers
         , word8
         , serialise
+        , esa-mib
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
