--- a/stack.yaml
+++ b/stack.yaml
@@ -38,6 +38,7 @@ resolver: lts-13.27
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
+- ../esa-mib
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
