--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -120,6 +120,7 @@ library
         , serialise
         , esa-mib
         , scientific
+        , sorted-list
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
