--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -121,6 +121,7 @@ library
         , esa-mib
         , scientific
         , sorted-list
+        , deepseq
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
