--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -275,6 +275,8 @@ executable CommandingTest
         , text
         , unliftio
 
+
+
 executable CommandingAD
     main-is: CommandingAD.hs
     default-language: Haskell2010
@@ -293,3 +295,22 @@ executable CommandingAD
         , text
         , unliftio
         , stm-conduit
+
+
+executable TCEncodeTests
+    main-is: TCEncodeTests.hs
+    default-language: Haskell2010
+    hs-source-dirs: src/test
+    if flag(llvm)
+        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+    else
+        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+    build-depends:
+        esa-space-protocols
+        , base
+        , bytestring
+        , conduit
+        , conduit-extra
+        , rio
+        , text
+        , unliftio
