Added esa-base as dependency

--- a/esa-mib.cabal
+++ b/esa-mib.cabal
@@ -85,6 +85,7 @@ library
     , multimap
     , directory
     , lens
+    , esa-base
 
   -- Directories containing source files.
   hs-source-dirs:      src
