--- a/stack.yaml
+++ b/stack.yaml
@@ -30,6 +30,9 @@ resolver: lts-13.29
 #   - wai
 packages:
 - .
+- ../esa-base
+
+
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
