--- a/stack.yaml
+++ b/stack.yaml
@@ -38,7 +38,9 @@ resolver: lts-13.29
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
+- ../esa-base
 - ../esa-mib
+
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
