Added CnC Protocol (currently only TC receiving side)

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -71,6 +71,7 @@ library
         Protocol.SizeOf
         Protocol.NCTRS
         Protocol.EDEN
+        Protocol.CnC
         Protocol.ProtocolInterfaces
         Protocol.Switcher
 
