--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -145,7 +145,8 @@ executable WriteConfig
         bytestring >=0.10.8.2 && <0.11
 
 
-executable TestBits
+benchmark TestBits
+    type: exitcode-stdio-1.0
     main-is: TestBits.hs
     default-language: Haskell2010
     hs-source-dirs: src/test
@@ -306,7 +307,8 @@ executable CommandingAD
         , stm-conduit
 
 
-executable TCEncodeTests
+test-suite TCEncodeTests
+    type: exitcode-stdio-1.0
     main-is: TCEncodeTests.hs
     default-language: Haskell2010
     hs-source-dirs: src/test
