Updated to actual implementation of the libraries

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ cabal.project.local~
 .ghc.environment.*
 stack.yaml.lock
 stack.yaml~
+esa-base/
+esa-mib/
 esa-space-protocols/
 manual-stack/
 mcs-interface/
