Changed parsed DUs to a new data type.
There will be some work necessary for gaps in TM transfer frames and spillover packets.

--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -66,6 +66,7 @@ library
         Data.PUS.TMFrame
         Data.PUS.TMFrameDfh
         Data.PUS.TMFrameExtractor
+        Data.PUS.ExtractedDU
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
         Protocol.SizeOf
